# renovo-dashboard

./: .env.local.example  .env.playwright.example  .gitignore  AGENTS.md  README-source-of-truth.md  README.md  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  vercel.json
.claude/: launch.json
backend/: .env.example  alembic.ini  create_tables.py  debug_db_connection.py  pyproject.toml  requirements.txt  seed_eot_demo.py
backend/alembic/: env.py
backend/alembic/versions/: 20260324_0001_initial_schema.py  20260324_0002_eot_domain.py  20260325_0003_tenant_memberships.py  20260326_0004_access_schema_alignment.py  20260326_0005_eot_enum_value_alignment.py
backend/app/: __init__.py  main.py
backend/app/api/eot/: __init__.py  auth.py  authorization.py  router.py
backend/app/api/routes/: health.py
backend/app/core/: config.py  storage.py
backend/app/db/: base.py  models.py  session.py  vector.py
backend/app/models/: __init__.py  associations.py  base.py  case.py  claim.py  document.py  enum_values.py  evidence.py  inspection.py  issue.py  message.py  property.py  recommendation.py  tenancy.py  tenant.py  tenant_membership.py  user_profile.py
backend/app/repositories/: __init__.py  base.py  inspection.py  property.py  tenant.py
backend/app/schemas/: __init__.py  eot.py
backend/app/services/: __init__.py  eot.py
backend/sql/: 20260324_production_cutover_prep.sql
backend/tests/: test_membership_authorization.py
(+571 files in other folders)
