[project]
name = "renovo-backend"
version = "0.1.0"
description = "Clean backend foundation for Renovo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "greenlet>=3.0,<4.0",
    "pgvector>=0.3,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "supabase>=2.15,<3.0",
    "uuid6>=2024.7.10,<2027.0",
]

[project.scripts]
app = "server:app"

[tool.poetry]
name = "renovo-backend"
version = "0.1.0"
description = "Clean backend foundation for Renovo"
authors = ["Renovo"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.111,<1.0"
uvicorn = { version = ">=0.30,<1.0", extras = ["standard"] }
sqlalchemy = ">=2.0,<3.0"
alembic = ">=1.13,<2.0"
asyncpg = ">=0.29,<1.0"
greenlet = ">=3.0,<4.0"
pgvector = ">=0.3,<1.0"
pydantic-settings = ">=2.2,<3.0"
supabase = ">=2.15,<3.0"
uuid6 = ">=2024.7.10,<2027.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
pytest-asyncio = ">=0.23,<1.0"
ruff = ">=0.6,<1.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
